--- a/prototypes/current/information-architecture-p2.html
+++ b/prototypes/current/information-architecture-p2.html
@@ -149,11 +149,12 @@
 		
 	</header>
 	<div class='article_body'>
-		<h4 id="future-release-vpn-required-">Future release (VPN Required)</h4>
+		<p><img src="../../img_data/prototypes/VPN.svg" alt="vpn_required"/></p>
+<h4 id="future-release">Future release</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase2.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase2.html</a></p>
-<h4 id="phase-1-release-vpn-required-">Phase 1 release (VPN Required)</h4>
+<h4 id="phase-1-release">Phase 1 release</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html</a></p>
-<h4 id="mobile-phase-1-release-vpn-required-">Mobile phase 1 release (VPN Required)</h4>
+<h4 id="mobile-phase-1-release">Mobile phase 1 release</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA2/page/spark.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA2/page/spark.html</a></p>
 		
 	</div>
