--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -572,12 +572,18 @@
                             <polygon id="Fill-33" fill="#D9D8D7" mask="url(#mask-4)" points="139.032139 72.6438813 137.160704 69.0490943 135.298595 72.6438813"></polygon>
                         </g>
                     </g>
-                    <text id="Q" font-family=".SFNSDisplay-Regular, .SF NS Display" font-size="50" font-weight="normal" letter-spacing="0.5" fill-opacity="0.2" fill="#FFFFFF">
-                        <tspan x="98" y="112">Q</tspan>
-                    </text>
-                    <text id="F" font-family=".SFNSDisplay-Regular, .SF NS Display" font-size="50" font-weight="normal" letter-spacing="0.5" fill-opacity="0.2" fill="#FFFFFF">
-                        <tspan x="2" y="112">F</tspan>
-                    </text>
+                    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" fill-opacity="0.2">
+                        <g id="faq-nbg" transform="translate(0, 0)" fill="#FFFFFF">
+                            <path d="M119.025003,79.7249942 C129.000005,79.7249942 136.775006,86.9499954 136.775006,97.4999971 C136.775006,102.024998 135.350006,105.924999 132.900006,108.899999 L137.875007,115 L135.675006,115 L131.700006,110.224999 C128.525005,113.45 124.025004,115.275 119.025003,115.275 C109.050002,115.275 101.275001,108.049999 101.275001,97.4999971 C101.275001,86.9499954 109.050002,79.7249942 119.025003,79.7249942 Z M119.025003,81.4999945 C110.200002,81.4999945 103.225001,87.9249956 103.225001,97.4999971 C103.225001,107.074999 110.200002,113.5 119.025003,113.5 C123.575004,113.5 127.650005,111.774999 130.525005,108.774999 L121.325004,97.5749971 L123.550004,97.5749971 L131.675006,107.424999 C133.650006,104.774998 134.825006,101.399998 134.825006,97.4999971 C134.825006,87.9249956 127.825005,81.4999945 119.025003,81.4999945 Z" id="Q"></path>
+                        </g>
+                    </g>
+
+                    <g id="Symbols" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" fill-opacity="0.2">
+                        <g id="faq-nbg" transform="translate(0, 0)" fill="#FFFFFF">
+                            <polygon id="F" points="30.0250046 96.499997 9.3000012 96.499997 9.3000012 81.7749946 30.7000047 81.7749946 30.7000047 79.9999943 7.45000089 79.9999943 7.45000089 115 9.3000012 115 9.3000012 98.2499973 30.0250046 98.2499973"></polygon>
+                        </g>
+                    </g>
+
                 </g>
             </g>
         </g>
