--- a/prototypes/current/information-architecture-p2.html
+++ b/prototypes/current/information-architecture-p2.html
@@ -156,6 +156,22 @@
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA/IA-phase1.html</a></p>
 <h4 id="mobile-phase-1-release">Mobile phase 1 release</h4>
 <p><a href="https://uxprototype.cisco.com/projects/Reskin/wap/IA2/page/spark.html">https://uxprototype.cisco.com/projects/Reskin/wap/IA2/page/spark.html</a></p>
+<h1 id="instructions">Instructions</h1>
+<p><img src="../../img_data/prototypes/Mobile-2x.png" alt="mobile"/>
+<img src="../../img_data/prototypes/Desktop-2x.png" alt="Desktop"/></p>
+<h3 id="on-mobile">On Mobile</h3>
+<p>1) For the most optimal experience, use Chrome (mobile mode) or IPhone (web app mode) to view this prototype.</p>
+<p>2) If you encounter any issues, clear the  browser cache and reload page.</p>
+<p>3) Input the accout to sign in. (empty or refer to the people list)</p>
+<p>4) If there is no space under the accout, you will have to schedule a meeting in a new space.</p>
+<p>5) If there are already some spaces under the accout, you can see the space list directly.</p>
+<p>6) Use space balls to switch screens in the space.</p>
+<p>7) Press &#39;Enter&#39; after inputting something to send messages in the chat panel.</p>
+<p>8) See the meetings you scheduled in the meeting panel.</p>
+<h3 id="on-desktop">On Desktop</h3>
+<p>1) Use Chrome browser to view the prototype for the best results.</p>
+<h1 id="goals">Goals</h1>
+<p>To test new design for Spark.</p>
 		
 	</div>
 	<!-- hiding pagination per Damon's feedback 
