--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Home</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="./img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="./css/public.css" media="screen">
@@ -131,7 +131,7 @@
       <div class="block-wrapper">
         <a class="sectionBlock bg_orange" id='sectionBlock_prototype' href="./prototypes/index.html">
           <div class="block-bg">
-              <svg width="1046px" height="251px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink"> 
+              <svg data-svg width="1046px" height="251px" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1046 251"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink"> 
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
 <title>Mobile</title>
     <desc>Created with Sketch.</desc>
@@ -335,7 +335,7 @@
       <div class="block-wrapper2">
           <a class="sectionBlock bg_yellow" id='sectionBlock_research' href="./research/index.html">
             <div class="block-bg">
-                <svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" xmlns="http://www.w3.org/2000/svg"  preserveAspectRatio="xMinYMin meet" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Research</title>
     <desc>Created with Sketch.</desc>
@@ -499,7 +499,7 @@
           </a>
           <a class="sectionBlock bg_blue last_block" id='sectionBlock_team' href="./team/index.html">
             <div class="block-bg">
-                <svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>team</title>
     <desc>Created with Sketch.</desc>
