--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -4,7 +4,7 @@
   <title>Prototypes</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../css/public.css" media="screen">
@@ -140,7 +140,7 @@
         <div class="block-wrapper2">
             <a class="sectionBlock bg_orange" id='con_current' href="./current/index.html">
                 <div class="block-bg">
-                    <svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
@@ -295,7 +295,7 @@
             </a>     
             <a class="sectionBlock bg_yellow2 last_block" id='con_archiving' href="./archived/index.html">
                 <div class="block-bg">
-                   <svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                   <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" version="1.1" preserveAspectRatio="xMinYMin meet"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
@@ -330,7 +330,7 @@
         <div class="block-wrapper2">
             <a class="sectionBlock bg_blue" id='con_experimental' href="./experimental/index.html">
                 <div class="block-bg">
-                    <svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
@@ -474,7 +474,7 @@
             </a>
             <a class="sectionBlock bg_dark last_block" id='con_faq' href="./faq/index.html">
                 <div class="block-bg">
-                    <svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg data-svg width="502px" height="192px" viewBox="0 0 502 192" preserveAspectRatio="xMinYMin meet"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 46.1 (44463) - http://www.bohemiancoding.com/sketch -->
     <title>Mobile</title>
     <desc>Created with Sketch.</desc>
