--- a/prototypes/current/information-architecture.html
+++ b/prototypes/current/information-architecture.html
@@ -4,7 +4,7 @@
   <title>IA (Phase 1)</title>
 <meta charset='utf-8'>
 <link rel="icon" type="image/x-icon" href="../../img/fav.ico">
-<meta name="viewport" content="width=device-width,minimal-ui,initial-scale=1.0" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link rel="stylesheet" type="text/css" href="../../css/public.css" media="screen">
