--- a/prototypes/archived/index.html
+++ b/prototypes/archived/index.html
@@ -3,7 +3,7 @@
   <head>
       <title>Prototypes</title>
 <meta charset='utf-8'>
-<link rel="icon" type="image/x-icon" href="../../img/fav.ico">
+<link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
@@ -193,7 +193,7 @@
                     <div class='articleBlock_cover archived_articleBlock_cover'>
                         <p class='list_space'></p>
                         <p class="list_title">Spark Device Pairing</p>
-                        <p class='list_item_date'>2017-8-10</p>
+                        <p class='list_item_date'>2017-8-9</p>
                         <p class='list_item_desc'>Mobile and Desktop Spark Prototype featuring the pairing functions</p>
                     </div>
                     <div class="list_img" style="background-image: url('../../img_data/prototypes/cover/Spark Pairing_Cover.png');"></div>
