--- a/prototypes/archived/spark20170124.html
+++ b/prototypes/archived/spark20170124.html
@@ -3,7 +3,7 @@
 <head>
   <title>Spark 2017.1.24</title>
 <meta charset='utf-8'>
-<link rel="icon" type="image/x-icon" href="../../img/fav.ico">
+<link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
 <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 <meta name="keywords" content="" />
 <meta name="description" content="" />
