--- a/team/index.html
+++ b/team/index.html
@@ -326,14 +326,14 @@
                         <tspan x="21" y="88"></tspan>
                         <tspan x="21" y="107" font-weight="bold">Azure Wang</tspan>
                     </text>
-                </g>
-                <circle data-tf='arthus' cx='600' cy='200' r='30' fill='url(#parrten_arthus)'></circle>
-                <circle data-tf='azure' cx='662' cy='240' r='30' fill='url(#parrten_azure)'></circle>
-                <circle data-tf='fiona' cx='35' cy='225' r='30' fill='url(#parrten_fiona)'></circle>
-                <circle data-tf='damon' cx='245' cy='255' r='30' fill='url(#parrten_damon)'></circle>
+                </g>            
             </g>
         </g>
     </g>
+    <circle data-tf='arthus' cx='600' cy='200' r='30' fill='url(#parrten_arthus)' stroke="#F15424" stroke-width="4"></circle>
+    <circle data-tf='azure' cx='662' cy='240' r='30' fill='url(#parrten_azure)' stroke="#F15424" stroke-width="4"></circle>
+    <circle data-tf='fiona' cx='35' cy='225' r='30' fill='url(#parrten_fiona)' stroke="#F15424" stroke-width="4"></circle>
+    <circle data-tf='damon' cx='245' cy='255' r='30' fill='url(#parrten_damon)' stroke="#F15424" stroke-width="4"></circle>
 </svg> 
         </div>
         </div>
