--- a/team/index.html
+++ b/team/index.html
@@ -291,8 +291,8 @@
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
                     <text id="When-the-path-comes" font-weight="300" fill="#FFFFFF">
-                        <tspan x="21" y="33">When the path comes to an </tspan>
-                        <tspan x="21" y="52">end, change.</tspan>
+                        <tspan x="21" y="33">When the path comes to an end, </tspan>
+                        <tspan x="21" y="52">change.</tspan>
                         <tspan x="21" y="71"></tspan>
                         <tspan x="21" y="90"></tspan>
                         <tspan x="21" y="109" font-weight="bold">Damon Daood</tspan>
@@ -317,8 +317,8 @@
                         <path stroke="#FFFFFF" stroke-width="4" d="M49.1395956,141.016093 L68.9598679,127 L219,127 C223.418278,127 227,123.418278 227,119 L227,10 C227,5.581722 223.418278,2 219,2 L10,2 C5.581722,2 2,5.581722 2,10 L2,119 C2,123.418278 5.581722,127 10,127 L49.6290484,127 L49.1395956,141.016093 Z"></path>
                     </g>
                     <text id="I'm-programming-like" font-weight="300" fill="#FFFFFF">
-                        <tspan x="23" y="31">I'm programming like a </tspan>
-                        <tspan x="23" y="50">composer. Are you ready to </tspan>
+                        <tspan x="23" y="31">I'm programming like a composer.</tspan>
+                        <tspan x="23" y="50">Are you ready to </tspan>
                         <tspan x="23" y="69">rock?</tspan>
                         <tspan x="23" y="88"></tspan>
                         <tspan x="23" y="107" font-weight="bold">Arthus Huang</tspan>
@@ -330,8 +330,8 @@
                         <path stroke="#FFFFFF" stroke-width="4" d="M3.78179378,36.9127257 L23.2183378,64.6709872 L23.2183378,119 C23.2183378,123.418278 26.8000598,127 31.2183378,127 L240.218338,127 C244.636616,127 248.218338,123.418278 248.218338,119 L248.218338,10 C248.218338,5.581722 244.636616,2 240.218338,2 L31.2183378,2 C26.8000598,2 23.2183378,5.581722 23.2183378,10 L23.2183378,40.9763254 L3.78179378,36.9127257 Z"></path>
                     </g>
                     <text id="I-like-prototyping," font-weight="300" fill="#FFFFFF">
-                        <tspan x="21" y="31">I like prototyping, video </tspan>
-                        <tspan x="21" y="50">games and tortoises.</tspan>
+                        <tspan x="21" y="31">I like prototyping, video games</tspan>
+                        <tspan x="21" y="50">and tortoises.</tspan>
                         <tspan x="21" y="69"></tspan>
                         <tspan x="21" y="88"></tspan>
                         <tspan x="21" y="107" font-weight="bold">Azure Wang</tspan>
@@ -351,7 +351,7 @@
         <div class="mobileBio">
           <!-- Damon -->
           <div class="teamBio">
-            <div class="bioImg"><img src="../img_data/avatar/Damon Daood.png"></div>
+            <div class="bioImg"><img src="../img_data/avatar/damon.png"></div>
             <blockquote>
             <footer>
             <q>When the path comes to an end, change.</q>
