--- a/team/index.html
+++ b/team/index.html
@@ -318,8 +318,8 @@
                     </g>
                     <text id="I'm-programming-like" font-weight="300" fill="#FFFFFF">
                         <tspan x="23" y="31">I'm programming like a composer.</tspan>
-                        <tspan x="23" y="50">Are you ready to </tspan>
-                        <tspan x="23" y="69">rock?</tspan>
+                        <tspan x="23" y="50">Are you ready to rock?</tspan>
+                        <tspan x="23" y="69"></tspan>
                         <tspan x="23" y="88"></tspan>
                         <tspan x="23" y="107" font-weight="bold">Arthus Huang</tspan>
                     </text>
